@@ -6,9 +6,10 @@ from elementtree import ElementTree
 
 from zope.interface import directlyProvidedBy, directlyProvides
 from zope.schema.interfaces import IField, IFromUnicode, IDict, ICollection
+from zope.i18nmessageid import Message
 
-from plone.supermodel.interfaces import XML_NAMESPACE, IToUnicode
-from plone.supermodel.debug import debuginfo
+from plone.supermodel.interfaces import XML_NAMESPACE, I18N_NAMESPACE, IToUnicode
+from plone.supermodel.debug import parseinfo
 
 _marker = object()
 noNS_re = re.compile('^{\S+}')
@@ -90,7 +91,7 @@ def elementToValue(field, element, default=_marker):
         for child in element:
             if noNS(child.tag.lower()) != 'element':
                 continue
-            debuginfo.stack.append(child)
+            parseinfo.stack.append(child)
 
             key_text = child.attrib.get('key', None)
             if key_text is None:
@@ -99,7 +100,7 @@ def elementToValue(field, element, default=_marker):
                 k = key_converter.fromUnicode(unicode(key_text))
 
             value[k] = elementToValue(field.value_type, child)
-            debuginfo.stack.pop()
+            parseinfo.stack.pop()
         value = fieldTypecast(field, value)
 
     elif ICollection.providedBy(field):
@@ -107,10 +108,10 @@ def elementToValue(field, element, default=_marker):
         for child in element:
             if noNS(child.tag.lower()) != 'element':
                 continue
-            debuginfo.stack.append(child)
+            parseinfo.stack.append(child)
             v = elementToValue(field.value_type, child)
             value.append(v)
-            debuginfo.stack.pop()
+            parseinfo.stack.pop()
         value = fieldTypecast(field, value)
 
     # Unicode
@@ -121,6 +122,14 @@ def elementToValue(field, element, default=_marker):
         else:
             converter = IFromUnicode(field)
             value = converter.fromUnicode(unicode(text))
+
+        # handle i18n
+        i18n_domain = parseinfo.i18n_domain
+        if i18n_domain and isinstance(value, unicode):
+            msgid = element.attrib.get(ns('translate', I18N_NAMESPACE))
+            if msgid is None:
+                msgid = value
+            value = Message(msgid, domain = i18n_domain, default=value)
 
     return value
 
